# async_tiled_mandelbrot_zoomer

./: .gitmodules  README.md
Classes/: AppDelegate.cpp  HelloWorldScene.cpp  HelloWorldScene.h
async_tiled/: CMakeLists.txt  PC-CMakeLists.txt  async_tiled.h  fractals.h  main.cpp  scrap.h
proj.android/: .cproject  .project  AndroidManifest.xml  build.xml
proj.android-studio/: settings.gradle
proj.android-studio/app/: AndroidManifest.xml  build.gradle
proj.android-studio/app/res/values/: strings.xml
proj.android/res/values/: strings.xml
proj.ios_mac/AsyncTiledGUI.xcodeproj/: project.pbxproj
proj.ios_mac/mac/: Info.plist
proj.tizen/: .project  tizen-manifest.xml
proj.win10/: AsyncTiledGUI.sln
proj.win10/App/: AsyncTiledGUI.vcxproj  AsyncTiledGUI.vcxproj.filters  Package.appxmanifest
proj.win32/: AsyncTiledGUI.sln
